@@ -1780,9 +1780,6 @@ module Mail
       else
         basename = values[:filename]
         filedata = values
-        unless filedata[:content]
-          filedata = values.merge(:content=>File.open(values[:filename], 'rb') { |f| f.read })
-        end
       end
       self.attachments[basename] = filedata
     end
