@@ -27,6 +27,7 @@ Bugs:
 * #539 - Fix that whitespace-only continued headers would be incorrectly parsed as the break between headers and body. (ConradIrwin)
 * #605 - Fix Mail::Address#name for nil addresses (peterkovacs)
 * #876 - Strip valid RFC-1342 separator characters between non-matching encoded-words (Caleb W. Corliss)
+* #876 - Fix that Mail::Message#add_file was adding a stray filename header (kirikak2)
 * #923 – Fix decoding nested quotes around non-US-ASCII addresses. (averell23)
 * #978 - Fix for invalid chars being left in a string for invalid b_value from encoding. (kjg)
 * #996 - Fix that multipart/mixed emails with a delivery-status part could be interpreted as bounces. (kjg)
